layout shift fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 body,html {
   font-family: 'Rubik', sans-serif;
+  overflow: overlay;
 }
